force-app/main/default/objects/RC_Home_Care_Forecast__c/RC_Home_Care_Forecast__c.object-meta.xml
<CustomObject>
    <label>RC Home Care Forecast</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>RC Home Care Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC Home Care Forecasts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>