force-app/main/default/objects/RC_Home_Care_Forecast__c/fields/Forecast_Month__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Month__c</fullName>
    <label>Forecast Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>