force-app/main/default/objects/RC_Home_Care_Forecast__c/fields/Monarch_Acutal__c.field-meta.xml
<CustomField>
    <fullName>Monarch_Acutal__c</fullName>
    <label>Monarch Acutal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>