force-app/main/default/objects/RC_Home_Care_Forecast__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vest/VV</fullName>
            </value>
            <value>
                <fullName>Monarch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>