force-app/main/default/objects/RC_Home_Care_Forecast__c/fields/Vest_VV_Actual__c.field-meta.xml
<CustomField>
    <fullName>Vest_VV_Actual__c</fullName>
    <label>Vest/VV Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>