force-app/main/default/objects/RC_Home_Care_Forecast__c/listViews/RC_Home_Care_Forecast.listView-meta.xml
<ListView>
    <fullName>RC_Home_Care_Forecast</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Forecast_Month__c</columns>
    <columns>Vest_VV_Forecast__c</columns>
    <columns>Vest_VV_Actual__c</columns>
    <columns>Monarch_Forecast__c</columns>
    <columns>Monarch_Acutal__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>RC Home Care Forecast</label>
    <sharedTo>
        <group>Respiratory</group>
    </sharedTo>
</ListView>